<resources>
    <string name="app_name">Luby</string>
    <string name="hint_user_name">Qual seu nome ?</string>
    <string name="hint_user_phone">E seu Whatsapp ?</string>
    <string name="hint_user_birthday">Sua data de nascimento ?</string>
    <string name="hint_user_email">Seu melhor e-mail ?</string>
    <string name="hint_user_password">Escolha uma senha super secreta</string>
    <string name="hint_user_email_login">Digite seu email</string>
    <string name="hint_user_password_login">Digite sua senha</string>
    <string name="login">Logar</string>
    <string name="sign_up">Cadastrar</string>
    <string name="no_account">Não tem conta ? Cadastre-se</string>
    <string name="image_description_lock_locked">Imagem de cadeado fechado</string>
    <string name="image_description_lock_unlocked">Imagem de cadeado aberto</string>
    <string name="image_description_smile">Imagem de um rostinho feliz</string>
    <string name="invalid_input">Campo inválido</string>
    <string name="user_registered">Usuario cadastrado</string>
    <string name="user_invalid">Usuario inválido</string>
    <string name="password_invalid">Senha inválida:</string>
    <string name="welcome">Bem vindx</string>
    <string name="user_unknown">Status: 422 Usuario não reconhecido</string>
</resources>
